--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "axios": "^1.13.2",
+    "formik": "^2.4.9",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "sass": "^1.97.1",
+    "swiper": "^12.0.3",
     "vite-plugin-svgr": "^4.5.0",
-    "vite-tsconfig-paths": "^6.0.3"
+    "vite-tsconfig-paths": "^6.0.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "@vitejs/plugin-react": "^5.1.1",
