--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "formik": "^2.4.9",
+    "framer-motion": "^12.27.5",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -22,6 +24,8 @@
     "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "react-text-transition": "^3.1.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.97.1",
     "swiper": "^12.0.3",
     "vite-plugin-svgr": "^4.5.0",
