--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BASE_URL='http://localhost:8000/api/v1/'
 REACT_APP_BASE_EMPTY_URL='http://localhost:8000'
+APP_URL='http://localhost:3000'
