--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.19",
     "formik": "^2.4.9",
     "framer-motion": "^12.27.5",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
