--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.11.0",
     "react-text-transition": "^3.1.0",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.30.0",
     "sass": "^1.97.1",
     "swiper": "^12.0.3",
     "vite-plugin-svgr": "^4.5.0",
